Implement Game Over State

--- a/SFML Template/SFML Template.vcxproj
+++ b/SFML Template/SFML Template.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="Engine\InputManager.cpp" />
     <ClCompile Include="Engine\StateMachine.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="States\GameOverState.cpp" />
     <ClCompile Include="States\GameState.cpp" />
     <ClCompile Include="States\MainMenuState.cpp" />
     <ClCompile Include="States\SplashState.cpp" />
@@ -144,6 +145,7 @@
     <ClInclude Include="Engine\Game.hpp" />
     <ClInclude Include="Engine\InputManager.hpp" />
     <ClInclude Include="Engine\StateMachine.hpp" />
+    <ClInclude Include="States\GameOverState.hpp" />
     <ClInclude Include="States\GameState.hpp" />
     <ClInclude Include="States\MainMenuState.hpp" />
     <ClInclude Include="States\SplashState.hpp" />
