Create Pipe Class

--- a/SFML Template/SFML Template.vcxproj
+++ b/SFML Template/SFML Template.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="Engine\Game.cpp" />
     <ClCompile Include="Engine\InputManager.cpp" />
     <ClCompile Include="Engine\StateMachine.cpp" />
+    <ClCompile Include="GameObjects\Pipe.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="States\GameOverState.cpp" />
     <ClCompile Include="States\GameState.cpp" />
@@ -145,6 +146,7 @@
     <ClInclude Include="Engine\Game.hpp" />
     <ClInclude Include="Engine\InputManager.hpp" />
     <ClInclude Include="Engine\StateMachine.hpp" />
+    <ClInclude Include="GameObjects\Pipe.hpp" />
     <ClInclude Include="States\GameOverState.hpp" />
     <ClInclude Include="States\GameState.hpp" />
     <ClInclude Include="States\MainMenuState.hpp" />
